--- a/index.html
+++ b/index.html
@@ -31,13 +31,13 @@
     s.parentNode.insertBefore(t,s)}(window, document,'script',
     'https://connect.facebook.net/en_US/fbevents.js');
     // TODO: Replace FB_PIXEL_ID with your Facebook Pixel ID
-    fbq('init', 'FB_PIXEL_ID');
+    fbq('init', '1050823688683934');
     fbq('track', 'PageView');
   </script>
   <noscript>
     <!-- Facebook Pixel noscript fallback -->
     <img height="1" width="1" style="display:none"
-      src="https://www.facebook.com/tr?id=FB_PIXEL_ID&ev=PageView&noscript=1"/>
+      src="https://www.facebook.com/tr?id=1050823688683934&ev=PageView&noscript=1"/>
   </noscript>
 
   <style>
