--- a/index.html
+++ b/index.html
@@ -11,13 +11,13 @@
   <link rel="icon" href="data:;base64,iVBORw0KGgo=" />
 
   <!-- Google Analytics (GA4) - Replace MEASUREMENT_ID -->
-  <script async src="https://www.googletagmanager.com/gtag/js?id=GA_MEASUREMENT_ID"></script>
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-EK7YXFSG98"></script>
   <script>
     window.dataLayer = window.dataLayer || [];
     function gtag(){dataLayer.push(arguments);}
     gtag('js', new Date());
     // TODO: Replace GA_MEASUREMENT_ID with your GA4 measurement id (G-XXXXXXX)
-    gtag('config', 'GA_MEASUREMENT_ID', { 'send_page_view': true });
+    gtag('config', 'G-EK7YXFSG98', { 'send_page_view': true });
   </script>
 
   <!-- Facebook Pixel - Replace FB_PIXEL_ID -->
